[gd_scene load_steps=18 format=3 uid="uid://brd0kac4jp2vl"]

[ext_resource type="PackedScene" uid="uid://dey3vrrqpebvc" path="res://scenes/actor/enemy/enemy.tscn" id="1_qt3ec"]
[ext_resource type="Script" path="res://scenes/actor/enemy/slime/slime.gd" id="2_4alqi"]
[ext_resource type="Shader" path="res://scenes/actor/actor.gdshader" id="2_yrbyr"]
[ext_resource type="Texture2D" uid="uid://gg61tcxp0wm4" path="res://assets/sprites/oryx_16bit_fantasy_creatures_trans.png" id="4_oe56u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_knwp0"]
resource_local_to_scene = true
shader = ExtResource("2_yrbyr")
shader_parameter/whitening = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_et3ct"]
atlas = ExtResource("4_oe56u")
region = Rect2(48, 336, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l6ur"]
atlas = ExtResource("4_oe56u")
region = Rect2(48, 312, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymlrn"]
atlas = ExtResource("4_oe56u")
region = Rect2(48, 336, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnvpn"]
atlas = ExtResource("4_oe56u")
region = Rect2(48, 336, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2atk"]
atlas = ExtResource("4_oe56u")
region = Rect2(48, 312, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_s2rbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_et3ct")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l6ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymlrn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnvpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2atk")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_447o8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CharacterSprite:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_fxbbj"]
resource_name = "jump"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShadowSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_dvti4"]
resource_name = "slime_jump"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShadowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.35, 0.75),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -28), Vector2(0, -9)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CharacterSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.35, 0.75),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1.25, 0.75), Vector2(0.75, 1.25), Vector2(1.25, 0.75)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_paxk8"]
resource_name = "slime_pre_jump"
length = 0.25
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_wgs6i"]
resource_name = "take_damage"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.5, 0.0, 0.5, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mth55"]
_data = {
"RESET": SubResource("Animation_447o8"),
"jump": SubResource("Animation_fxbbj"),
"slime_jump": SubResource("Animation_dvti4"),
"slime_pre_jump": SubResource("Animation_paxk8"),
"take_damage": SubResource("Animation_wgs6i")
}

[node name="Slime" instance=ExtResource("1_qt3ec")]
script = ExtResource("2_4alqi")
speed = 1

[node name="CharacterSprite" parent="." index="1"]
material = SubResource("ShaderMaterial_knwp0")
sprite_frames = SubResource("SpriteFrames_s2rbv")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_mth55")
}

[node name="JumpTimer" type="Timer" parent="." index="4"]
wait_time = 3.5
one_shot = true
autostart = true

[node name="WindUpTimer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="WindUpTimer" to="." method="_on_wind_up_timer_timeout"]
